--- a/posts/20200913.md
+++ b/posts/20200913.md
@@ -1,5 +1,7 @@
 ---
-title: 'New post!'
+title: 'New post kjgbskjfbnsk sdjnfkjsd sadkjfb!'
+coverImg: ''
+description: 'Draft European Union legislation raises the possibility that pre-installed Apple apps might be banned in Europe. Instead, consumers would be offered the option of installing them, creating a more level playing field between Apple and third-party developers offering competing apps.'
 author: 'Mikel Loidi'
 date: 13/09/2020
 tags: developer, jobs, react
